--- a/ContainerInstanceDemo/ContainerInstanceDemo.csproj
+++ b/ContainerInstanceDemo/ContainerInstanceDemo.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.5.0" />
+    <PackageReference Include="Azure.Identity" Version="1.9.0-beta.2" />
     <PackageReference Include="Microsoft.Azure.Management.ContainerInstance" Version="6.0.0" />
     <PackageReference Include="Microsoft.Azure.Management.ContainerInstance.Fluent" Version="1.38.0" />
     <PackageReference Include="Microsoft.Azure.Management.Fluent" Version="1.38.0" />
